[package]
name = "harbor-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Server orchestration for Hetzner Cloud"

[[bin]]
name = "harbor"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs = "6.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
hcloud = "0.25"
russh = "0.60"
cloudflare = "0.14"
console = "0.15"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
